--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -2,9 +2,9 @@ name: Integration Test
 on:
     push:
       branches:
-        - master
+        - main
     workflow_dispatch:
-        branches: [ master ]  
+        branches: [ main ]  
 
 jobs:
   build:
