--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -22,5 +22,5 @@ jobs:
 
       - name: Check outputs
         run: |
-          echo " output ${{ steps.selftest.outputs.myOutput }}"
+          echo " output ${{ steps.selftest.outputs.myOutput }}\n ${{ steps.selftest.outputs.myOutput }}"
           test "${{ steps.selftest.outputs.myOutput }}" == "Hello world"
