--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -12,6 +12,9 @@ env:
 
 jobs:
   build:
+    env:
+      job_env_var1: job env 1
+
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -22,7 +25,7 @@ jobs:
         uses: briegel0/python_show_env_action@main
         with: 
            showGithubVars: 'true'
-           listOfAppEnvVars: 'workflow_env_var1,workflow_env_var2'
+           listOfAppEnvVars: 'workflow_env_var1,workflow_env_var2,job_env_var1'
 
       - name: Check outputs
         run: |
