--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -7,8 +7,8 @@ on:
         branches: [ main ]  
 
 env:
-  workflow_env_var1: 'workflow env 1'
-  workflow_env_var2: 'workflow env 2'
+  workflow_env_var1: workflow env 1
+  workflow_env_var2: workflow env 2
 
 jobs:
   build:
@@ -18,14 +18,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+
       - name: Self test
         id: selftest
+
+        env:
+          step_env_var1: step env 11
+          step_env_var2: step env 22
 
         # Put your action repo here
         uses: briegel0/python_show_env_action@main
         with: 
            showGithubVars: 'true'
-           listOfAppEnvVars: 'workflow_env_var1,workflow_env_var2,job_env_var1'
+           listOfAppEnvVars: 'workflow_env_var1,workflow_env_var2,job_env_var1,step_env_var1,step_env_var2'
 
       - name: Check outputs
         run: |
