--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -35,18 +35,13 @@ jobs:
       - name: Show outputs
         run: |
           echo " output ${{ steps.selftest.outputs.myOutput}}"
-
-      - name: Check ok outputs dummy
-        if: contains(steps.selftest.outputs.myOutput, 'workflow_env_var1=workflow env 1')
-        run: |
-          exit(-1)     
-
-      - name: Check ok outputs
+ 
+      - name: Check ok outputs ( if does not contain expected fail... )
         if: contains(steps.selftest.outputs.myOutput, 'workflow_env_var1=workflow env 1') == false
         run: |
           exit(-1)               
 
-      - name: Check bad outputs             
+      - name: Check bad outputs ( if contains unexpected, fail.... )            
         if: contains(steps.selftest.outputs.myOutput, 'workflow_env_var1=workflow env 12')
         run: |
           exit(-1)               
